# fnvib

./: Cargo.toml  README.md  REAMDE.md  build.cmd  content_lists.toml  run.cmd
src/: content_lists.rs  main.rs  plugin.rs
src/cli/: mod.rs
src/generator/: clutter.rs  furniture.rs  lighting.rs  mod.rs  navmesh.rs  structure.rs
src/kits/: mod.rs
src/model/: layout.rs  room.rs
src/records/: cell.rs  mod.rs  navi.rs  navm.rs  refr.rs  tes4.rs  types.rs
src/ui/: app.rs  mod.rs
