[package]
name = "fnvib"
version = "0.1.0"
edition = "2024"

[features]
default = ["ui"]
ui = ["dep:eframe", "dep:egui"]

[dependencies]
binrw = "0.14"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"

[dependencies.eframe]
version = "0.28"
optional = true

[dependencies.egui]
version = "0.28"
optional = true
